--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ aliases:
     paths:
       - ~/.cache/yarn
       - node_modules
+      - packages/tools/*/node_modules
   - &attach_workspace
       attach_workspace:
         at: ~/repo
