--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "build": "lerna run --stream --no-prefix build",
     "build:prod": "NODE_ENV=production yarn run build",
     "copy-env-file": "[ ! -f .env ] && cp .env-example .env || true",
-    "chromatic": "run-chromatic -- chromatic",
-    "chromatic-base": "run-chromatic -- chromatic-base",
-    "chromatic-blog": "run-chromatic -- chromatic-blog",
-    "chromatic-content": "run-chromatic -- chromatic-content",
+    "chromatic": "yarn run run-chromatic -- chromatic",
+    "chromatic-base": "yarn run run-chromatic -- chromatic-base",
+    "chromatic-blog": "yarn run run-chromatic -- chromatic-blog",
+    "chromatic-content": "yarn run run-chromatic -- chromatic-content",
     "dereference": "node scripts/schemaDereference.js",
     "eslint": "eslint \"**/*.{js,jsx,ts,tsx}\"",
     "find-licenses": "node ./scripts/license.js",
