--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,24 +70,16 @@ jobs:
       - *attach_workspace
       - run:
           name: Publish Chromatic Module Base
-          environment:
-            CHROMATIC_PROJECT_TOKEN: ${CHROMATIC_PROJECT_TOKEN_BASE}
-          command: yarn run chromatic-base
+          command: CHROMATIC_PROJECT_TOKEN=${CHROMATIC_PROJECT_TOKEN_BASE} yarn run chromatic-base
       - run:
           name: Publish Chromatic Module Blog
-          environment:
-            CHROMATIC_PROJECT_TOKEN: ${CHROMATIC_PROJECT_TOKEN_BLOG}
-          command: yarn run chromatic-blog
+          command: CHROMATIC_PROJECT_TOKEN=${CHROMATIC_PROJECT_TOKEN_BLOG} yarn run chromatic-blog
       - run:
           name: Publish Chromatic Module Content
-          environment:
-            CHROMATIC_PROJECT_TOKEN: ${CHROMATIC_PROJECT_TOKEN_CONTENT}
-          command: yarn run chromatic-content
+          command: CHROMATIC_PROJECT_TOKEN=${CHROMATIC_PROJECT_TOKEN_CONTENT} yarn run chromatic-content
       - run:
           name: Publish Chromatic Module Form
-          environment:
-            CHROMATIC_PROJECT_TOKEN: ${CHROMATIC_PROJECT_TOKEN_FORM}
-          command: yarn run chromatic-form
+          command: CHROMATIC_PROJECT_TOKEN=${CHROMATIC_PROJECT_TOKEN_FORM} yarn run chromatic-form
 
 workflows:
   release:
