--- a/packages/tools/storybook/package.json
+++ b/packages/tools/storybook/package.json
@@ -9,11 +9,13 @@
     "chromatic-base": "yarn run run-chromatic -- --build-script-name 'storybook-base:build'",
     "chromatic-blog": "yarn run run-chromatic -- --build-script-name 'storybook-blog:build'",
     "chromatic-content": "yarn run run-chromatic -- --build-script-name 'storybook-content:build'",
+    "chromatic-form": "yarn run run-chromatic -- --build-script-name 'storybook-form:build'",
     "storybook": "node index.js",
     "storybook:build": "node index.js build",
     "storybook-base:build": "node index.js build --module=base",
     "storybook-blog:build": "node index.js build --module=blog",
-    "storybook-content:build": "node index.js build --module=content"
+    "storybook-content:build": "node index.js build --module=content",
+    "storybook-form:build": "node index.js build --module=form"
   },
   "dependencies": {
     "ajv": "^7.2.1",
