--- a/packages/tools/bundler/package.json
+++ b/packages/tools/bundler/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^15.0.0",
     "@rollup/plugin-replace": "^4.0.0",
     "@wordpress/babel-plugin-import-jsx-pragma": "^3.2.0",
     "autoprefixer": "^10.4.12",
@@ -48,7 +49,6 @@
     "postcss-sort-media-queries": "^4.2.1",
     "rollup": "^2.78.0",
     "rollup-plugin-import-resolver": "^1.2.0",
-    "rollup-plugin-node-externals": "^4.1.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-ts": "^3.0.2",
     "sass": "^1.52.1",
