--- a/packages/tools/bundler/package.json
+++ b/packages/tools/bundler/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-commonjs": "^23.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@rollup/plugin-replace": "^4.0.0",
@@ -49,6 +50,7 @@
     "postcss-sort-media-queries": "^4.2.1",
     "rollup": "^2.78.0",
     "rollup-plugin-import-resolver": "^1.2.0",
+    "rollup-plugin-node-externals": "^5.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-ts": "^3.0.2",
     "sass": "^1.52.1",
